MOSIP-40379 removed ignore line from PreReg module
Signed-off-by: Prathmesh Jadhav <prathmesh.j@cyberpwn.com>

--- a/api-test/src/main/resources/preReg/GetAllDocForPrId/getAllDocForPrIdResult.hbs
+++ b/api-test/src/main/resources/preReg/GetAllDocForPrId/getAllDocForPrIdResult.hbs
@@ -1,1 +1,10 @@
-{}
+{
+    "response": {
+        "documentsMetaData": [
+            {
+                "docCatCode": "{{docCatCode}}",
+                "docTypCode": "{{docTypCode}}"
+            }
+        ]
+    }
+}
