--- a/api-test/src/main/resources/preReg/FetchApplicationByPrid/fetchApplicationByPridResult.hbs
+++ b/api-test/src/main/resources/preReg/FetchApplicationByPrid/fetchApplicationByPridResult.hbs
@@ -1,11 +1,12 @@
 {
   "response": {
+    "preRegistrationId": "{{preRegistrationId}}",
     "demographicDetails": {
       "identity": {
         "postalCode": "14022",
         "dateOfBirth": "1996/01/01",
-        "phone": "8249742850",
-        "email": "goku@hogwarts.co.in"
+        "phone": "{{phone}}",
+        "email": "{{email}}"
       }
     }
   }
