--- a/api-test/src/main/resources/preReg/GetPreRegDemographicDataByPrid/getPreRegDemographicDataByPridResult.hbs
+++ b/api-test/src/main/resources/preReg/GetPreRegDemographicDataByPrid/getPreRegDemographicDataByPridResult.hbs
@@ -4,7 +4,7 @@
 			"identity": {
 				"postalCode": "14022",
 				"dateOfBirth": "1996/01/01",
-				"phone": "8249742850"
+				"phone": "{{phone}}"
 			}
 		}
 	}
