--- a/api-test/src/main/resources/preReg/GetPreRegInfoByPrid/getPreRegInfoByPridResult.hbs
+++ b/api-test/src/main/resources/preReg/GetPreRegInfoByPrid/getPreRegInfoByPridResult.hbs
@@ -5,8 +5,8 @@
         "identity": {
           "postalCode": "14022",
           "dateOfBirth": "1996/01/01",
-          "phone": "8249742850",
-          "email": "goku@hogwarts.co.in"
+          "phone": "{{phone}}",
+          "email": "{{email}}"
         }
       }
     }
